Subindo novas inserções no layout do projeto

--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
+
+body
+{
+    padding: 0;
+    margin: 0;
+}
 .header
 {
     display: flex;
     justify-content: center;
+    background-color: black;
 }
 
 
@@ -21,4 +28,36 @@ li:hover
     background-color: rgb(255, 208, 0);
     color: black;
     transition: 0.8s;
+}
+
+main
+{   
+    width: 100%;   
+    display: flex;
+    justify-content: center;
+}
+
+.sectionTwo
+{ 
+    width:  400px;
+    height: 400px;     
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    border-radius: 5px;
+}
+.sectionOne
+{
+    margin-top: 20px;         
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+}
+
+.sectionTwo:hover
+{
+    background-color: black;
+    cursor: pointer;
+    color: white;
+
 }
